# bdd100k_detector

./: .dockerignore  .envsample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_old.txt
config/: bdd100k.yaml  data_config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: eda_automated.ipynb  eval_analysis.ipynb  predict.ipynb  train.ipynb  v51.py
reports/: assignment_presentation.pptx  summary.json
scripts/: download_data.sh  setup_docker_env.sh  train.sh
src/: main.py
src/bdd_data_analysis/: data_analyzer.py
src/bdd_dataset/: __init__.py  bdd100k_dataset.py
src/bdd_detector/: __init__.py  bdd100k_detector.py  training_args.py
src/bdd_evaluator/: evaluator.py
src/bdd_trainer/: trainer.py
src/bdd_utils/: data_utils.py  file_utils.py  image_utils.py  metrics_utils.py  model_utils.py
